@@ -670,6 +670,14 @@ extern int slurm_hostlist_push_host PARAMS((hostlist_t hl, const char *host));
 extern ssize_t slurm_hostlist_ranged_string PARAMS((hostlist_t hl,
 						    size_t n, char *buf));
 
+/* slurm_hostlist_ranged_string_malloc():
+ *
+ * Returne the string representation of the hostlist hl.
+ *
+ * The result must be released using free();
+ */
+extern ssize_t slurm_hostlist_ranged_string_malloc PARAMS((hostlist_t hl));
+
 /*
  * slurm_hostlist_shift():
  *
